--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        google()
         jcenter { url "https://jcenter.bintray.com/" }
         maven {url "https://repo.spring.io/plugins-release/"}
         mavenCentral()
@@ -42,6 +43,7 @@ android {
 repositories {
     jcenter { url "https://jcenter.bintray.com/" }
     maven {url "https://repo.spring.io/plugins-release/"}
+    google()
     mavenCentral()
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
